<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/list_plan_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_plan_name_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:id="@+id/list_plan_city"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/string_wellington"/>
        <TextView
            android:id="@+id/list_plan_cost"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/string_place_price_default"/>
    </LinearLayout>
</LinearLayout>