<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lovemaiqi.comp423.View.PlanSetting">

    <RelativeLayout
        android:id="@+id/title_makeplans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_grey">
        <Button
            android:id="@+id/setting_btn_back"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_makeplans"/>
        <Button
            android:id="@+id/plan_setting_makeplan"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/title_makeplans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/choosestartdate"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_travel_start"/>
                <Button
                    android:id="@+id/btn_startdate"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/chooseenddate"

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_travel_end"/>
                <Button
                    android:id="@+id/btn_enddate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray"/>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->
                <!--<TextView-->

                    <!--android:layout_weight="1"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/string_skipbeento"/>-->
                <!--<Button-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/string_no"/>-->
            <!--</LinearLayout>-->
            <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_sameassetting"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_use_recommendation"/>
                <Button
                    android:id="@+id/btn_use_recommendation"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/string_no"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/whetherskip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/string_natural_landscape"/>
                    <SeekBar
                        android:id="@+id/seekbar_natural"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:progress="50" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/string_cultural_landscape"/>
                    <SeekBar
                        android:id="@+id/seekbar_cultural"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:progress="50" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/string_sports"/>
                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:progress="50" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/text_budgetsetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_budget"/>
                    <TextView
                        android:layout_toRightOf="@id/text_budgetsetting"
                        android:layout_toEndOf="@id/text_budgetsetting"
                        android:id="@+id/text_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_pace_default"/>
                    <SeekBar
                        android:id="@+id/seekbar_budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_budgetsetting"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:progress="50" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/text_pace_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_pace"/>
                    <TextView
                        android:layout_toRightOf="@id/text_pace_setting"
                        android:layout_toEndOf="@id/text_pace_setting"
                        android:id="@+id/text_pace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_pace_default"/>
                    <SeekBar
                        android:layout_below="@id/text_pace_setting"
                        android:id="@+id/seekbar_pace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:progress="50" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
