<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/result_view_place">
    <ImageView
        android:id="@+id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/img_timeline"/>
    <TextView
        android:id="@+id/result_day"
        android:layout_toRightOf="@id/timeline"
        android:layout_toEndOf="@id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="5pt"/>
    <ImageView
        android:layout_below="@id/result_day"
        android:id="@+id/result_place_type"

        android:layout_toRightOf="@id/timeline"
        android:layout_toEndOf="@id/timeline"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher" />
    <RelativeLayout
        android:layout_below="@id/result_day"
        android:id="@+id/result_place_info"
        android:layout_toRightOf="@id/result_place_type"
        android:layout_toEndOf="@id/result_place_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_place_name_default"
            android:textSize="5pt"/>
        <RatingBar
            android:id="@+id/result_rating"
            android:layout_below="@id/result_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.1"
            android:rating="2.5"
            style="?android:attr/ratingBarStyleSmall"/>

        <TextView
            android:id="@+id/result_place_tag_1"
            android:layout_below="@id/result_place_name"
            android:layout_toRightOf="@id/result_rating"
            android:layout_toEndOf="@id/result_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_museum"
            android:textSize="4pt"
            android:paddingLeft="5dp"
            />
        <TextView
            android:id="@+id/result_avgtime_title"
            android:layout_below="@id/result_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_avgtime"
            android:textSize="4pt"
            />
        <TextView
            android:id="@+id/result_avgtime"
            android:layout_below="@id/result_rating"
            android:layout_toRightOf="@id/result_avgtime_title"
            android:layout_toEndOf="@id/result_avgtime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_avgtime_default"
            android:textSize="4pt"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            />
        <TextView
            android:id="@+id/result_avgtime_hour"
            android:layout_toEndOf="@id/result_avgtime"
            android:layout_toRightOf="@id/result_avgtime"
            android:layout_below="@id/result_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_avgtime_hour"
            android:textSize="4pt"
            />
        <!--<TextView-->
            <!--android:id="@+id/result_place_tag_2"-->
            <!--android:layout_toRightOf="@id/result_place_tag_1"-->
            <!--android:layout_toEndOf="@id/result_place_tag_1"-->
            <!--android:layout_below="@id/result_place_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/string_museum"-->
            <!--android:textSize="5pt"/>-->
        <!--<TextView-->
            <!--android:id="@+id/result_place_tag_3"-->
            <!--android:layout_toRightOf="@id/result_place_tag_2"-->
            <!--android:layout_toEndOf="@id/result_place_tag_2"-->
            <!--android:layout_below="@id/result_place_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/string_museum"-->
            <!--android:textSize="5pt"/>-->

        <ImageView
            android:id="@+id/result_place_nav"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:src="@drawable/img_nav"/>
        <TextView
            android:id="@+id/result_place_price"
            android:layout_toLeftOf="@id/result_place_nav"
            android:layout_toStartOf="@id/result_place_nav"
            android:layout_below="@id/result_place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_place_price_default"
            android:textSize="10pt"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

    </RelativeLayout>
    <ImageView
        android:id="@+id/result_place_pic"
        android:layout_toRightOf="@id/timeline"
        android:layout_toEndOf="@id/timeline"
        android:layout_below="@id/result_place_type"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/img_tepapa2" />
    <TextView
        android:id="@+id/result_place_desc"
        android:layout_below="@id/result_place_pic"
        android:layout_toRightOf="@id/timeline"
        android:layout_toEndOf="@id/timeline"
        android:layout_alignBottom="@id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="4pt"
        android:text="@string/desc_result_default"/>
</RelativeLayout>